--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 # //environment variable
-
-MONGO_URI=mongodb://localhost:27017/E-Commerce-app
-JWT_SECRET=your_secret_key
 PORT=7000
+MONGO_URI=mongodb+srv://muhsinatasni:msisha@cluster0.uhnhxzt.mongodb.net/EcomApp?retryWrites=true&w=majority&appName=Cluster0
+# mongodb://localhost:27017/E-Commerce-app
+JWT_SECRET=your_secret_key
